--- a/examples/feature_manager_example/pubspec.yaml
+++ b/examples/feature_manager_example/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   shared_preferences: ^2.3.5
 
 dev_dependencies:
+  build_runner: ^2.4.15
   feature_manager_generator: ^3.0.5
 
 # The following section is specific to Flutter.
