--- a/examples/feature_manager_remote_config_example/pubspec.yaml
+++ b/examples/feature_manager_remote_config_example/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.0.0
+  sdk: ^3.6.0
 
 dependencies:
   flutter:
@@ -19,6 +19,7 @@ dependencies:
   shared_preferences: ^2.5.3
 
 dev_dependencies:
+  build_runner: ^2.4.15
   flutter_lints: ^5.0.0
   feature_manager_generator: 3.0.4
 
