--- a/melos.yaml
+++ b/melos.yaml
@@ -9,6 +9,8 @@ scripts:
     exec: dart analyze .
   format:
     exec: dart format .
+  build:
+    exec: dart pub run build_runner build --delete-conflicting-outputs
   test:
     description: Run tests in a specific package.
     run: flutter test
