--- a/examples/feature_manager_remote_config_example/pubspec.yaml
+++ b/examples/feature_manager_remote_config_example/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.4.15
   flutter_lints: ^5.0.0
-  feature_manager_generator: 3.0.4
+  feature_manager_generator: ^3.1.1
 
 dependency_overrides:
   win32: ^5.10.0
