--- a/packages/log_inspector/pubspec.yaml
+++ b/packages/log_inspector/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   path_provider: ^2.1.5
   path: ^1.9.0
   share_plus: ^11.0.0
+  idb_shim: ^2.6.1+7
+  idb_sqflite: ^1.3.3+7
+  sqflite: ^2.3.0
 
 dev_dependencies:
   flutter_test:
