chore: Update dependencies and SDK constraints across multiple packages for compatibility
- Bumped Dart SDK constraint to '>=3.7.0 <4.0.0' in several packages.
- Updated versions of dependencies including `flutter_lints`, `melos`, and others for improved compatibility and performance.
- Removed unused `flutter_lints` dependency from `feature_manager_remote_config` and `log_inspector`.
- Enhanced pagination support in `log_inspector` with new methods and improved test coverage.
- Refactored services to support dependency injection for better testability.
- Minor code quality improvements and formatting adjustments throughout the codebase.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: bedcode
 
 environment:
-  sdk: ^3.6.0
+  sdk: '>=3.7.0 <4.0.0'
 
 dev_dependencies:
-  melos: ^6.3.2
-  flutter_lints: ^5.0.0
+  melos: ^7.1.0
+  flutter_lints: ^6.0.0
