--- a/packages/feature_manager/pubspec.yaml
+++ b/packages/feature_manager/pubspec.yaml
@@ -3,10 +3,10 @@ description: Feature manager for developer preferences and experiments
 repository: https://github.com/thebedcoder/feature-manager/tree/master/packages/feature_manager
 issue_tracker: https://github.com/thebedcoder/feature-manager/issues
 
-version: 3.1.1
+version: 3.1.2
 
 environment:
-  sdk: ^3.6.0
+  sdk: '>=3.7.0 <4.0.0'
 
 dependencies:
   shared_preferences: ">=2.1.2 <3.0.0"
