--- a/packages/feature_manager_generator/pubspec.yaml
+++ b/packages/feature_manager_generator/pubspec.yaml
@@ -3,15 +3,15 @@ description: Feature manager generator for developer preferences and experiments
 repository: https://github.com/thebedcoder/feature-manager/tree/master/packages/feature_manager_generator
 issue_tracker: https://github.com/thebedcoder/feature-manager/issues
 
-version: 3.1.1
+version: 3.1.2
 
 environment:
-  sdk: ^3.6.0
+  sdk: '>=3.7.0 <4.0.0'
 
 dependencies:  
-  analyzer: ^7.5.2
-  build: ^2.4.2
-  source_gen: ^2.0.0
+  analyzer: ^7.4.0
+  build: ^3.0.0
+  source_gen: ^3.0.0
   feature_manager: ^3.1.1
 
 dev_dependencies:
