--- a/packages/feature_manager_remote_config/pubspec.yaml
+++ b/packages/feature_manager_remote_config/pubspec.yaml
@@ -3,10 +3,10 @@ description: Firebase Remote Config feature manager for developer preferences, e
 repository: https://github.com/thebedcoder/feature-manager/tree/master/packages/feature_manager_generator
 issue_tracker: https://github.com/thebedcoder/feature-manager/issues
 
-version: 3.1.1
+version: 3.1.2
 
 environment:
-  sdk: ^3.6.0
+  sdk: '>=3.7.0 <4.0.0'
 
 dependencies:
   flutter:
@@ -18,7 +18,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
 
 # The following section is specific to Flutter packages.
 flutter:
