--- a/packages/log_inspector/pubspec.yaml
+++ b/packages/log_inspector/pubspec.yaml
@@ -4,10 +4,10 @@ repository: https://github.com/thebedcoder/feature-manager/tree/master/packages/
 issue_tracker: https://github.com/thebedcoder/feature-manager/issues
 homepage: https://github.com/thebedcoder/feature-manager
 
-version: 1.0.2
+version: 1.0.3
 
 environment:
-  sdk: ^3.6.0
+  sdk: '>=3.7.0 <4.0.0'
   flutter: '>=3.0.0'
 
 dependencies:
@@ -21,11 +21,12 @@ dependencies:
   idb_shim: ^2.6.1+7
   idb_sqflite: ^1.3.3+7
   sqflite: ^2.3.0
+  web: ^1.1.1
+  js_interop_utils: ^1.0.8
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
 
 flutter:
   uses-material-design: true
